old_tests/tests/lean/1898.lean
def X (R : Type) [H : comm_ring R] := H.0
